<resources>
    <string name="app_name">PozitivFM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio">Радио</string>
    <string name="web_video">Веб-видео</string>
    <string name="about_us">О нас</string>
    <string name="pozitiv_fm">pozitiv.fm</string>
    <string name="mail">melnikovaolga1995@gmail.com</string>
    <string name="c_9_00_23_00">c 9:00 до 23:00 ежедневно</string>
    <string name="mob_kievstar">+38(067)628 07 77</string>
    <string name="tel">+38(048)799 08 29</string>
    <string name="adress">г. Одесса, ул.Среднефонтанская 19а, 2 этаж</string>
    <string name="title_about_us">Online радиостанция Pozitiv FM</string>

    <string name="notification_channel_name">Player controls</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="write_message">Напишите сообщение...</string>
    <string name="radio_chat">РАДИО ЧАТ</string>
    <string name="enter">Войти</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="to_registration">Зарегистрироваться</string>
    <string name="login">Логин(nickname)</string>
    <string name="password">Пароль</string>


    <string-array name="state_list">
        <item>Не выбрано</item>
        <item>Не женат</item>
        <item>Встречаюсь</item>
        <item>Помовлен</item>
        <item>Женат</item>
        <item>В гражданском браке</item>
        <item>Влюблён</item>
        <item>В активном поиске</item>
    </string-array>

    <string-array name="gender_list">
        <item>Не выбрано</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>
