<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context="ua.od.radio.pozitivefm.ui.chat.AuthorizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/authorization_type"
            android:text="@string/authorization"
            style="@style/type_enter" />

        <TextView
            android:id="@+id/registration_type"
            style="@style/type_enter"
            android:text="@string/registration" />
    </LinearLayout>

    <EditText
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="24dp"
        android:orientation="horizontal">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/enter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/enter_button_blue"
            android:text="@string/enter"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
